force-app/main/default/objects/Score_Change__c/Score_Change__c.object-meta.xml
<CustomObject>
    <description>Reporting Snapshot of Contact Score Changes over time</description>
    <label>Score Change</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Score Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>