force-app/main/default/objects/Score_Change__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Score Changes</relationshipLabel>
    <relationshipName>Score_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>