force-app/main/default/objects/Score_Change__c/fields/Scored_Date__c.field-meta.xml
<CustomField>
    <fullName>Scored_Date__c</fullName>
    <label>Scored Date</label>
    <type>DateTime</type>
</CustomField>